<resources>
    <string name="app_name">EmptyAppWithLogin</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="no_account">Don\'t have an account? Register here</string>
    <string name="name_optional">Name (Optional)</string>
    <string name="phone_optional">Phone Number (Optional)</string>
    <string name="welcome_message">Welcome to EmptyAppWithLogin</string>
    <string name="add_card">Add New Card</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>